feat: Implement complete post-COVID data pipeline
- Added data loading step to fetch dataset from Kaggle and log as W&B artifact.
- Implemented preprocessing step to clean and prepare the dataset, including handling missing values and encoding categorical variables.
- Created dataset splitting functionality to generate training and testing datasets with stratification options.
- Developed model training step using RandomForestRegressor with hyperparameter tuning capabilities.
- Added evaluation step to assess model performance on test data, including metrics calculation and visualization.
- Integrated W&B for experiment tracking and artifact management throughout the pipeline.
- Configured MLflow for managing pipeline execution and parameter handling.
- Established a Makefile for environment setup and cleanup processes.
- Included configuration management using Hydra for flexible parameter overrides.

--- a/day1/6-evaluate/conda.yaml
+++ b/day1/6-evaluate/conda.yaml
@@ -10,6 +10,6 @@ dependencies :
   - matplotlib
   - pip:
       - wandb == 0.18.5
-      - mlflow
+      - mlflow == 2.22.0
       - plotly
       - pillow
